[package]
name = "carlinkit"
version = "0.1.0"
edition = "2021"

[dependencies]
rusb = "0.9.4"
mpv = "0.2"
rodio = "0.19.0"
#video-rs = "0.8.1"
serialport = "4.5.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

#[dependencies]
#libsoxr = "0.2"
#mpv = "0.2.3"
